<resources>
    <string name="app_name">DoorDashLite</string>
    <string name="cd_name_of_the_restaurant">Restaurant name</string>
    <string name="cd_restaurant_detail_container">Restaurant detail container</string>
    <string name="loading_restaurants">Loading…</string>
    <string name="cd_list_of_restaurant">List of restaurants</string>
    <string name="cd_average_rating">Average rating</string>
    <string name="cd_status">Status</string>
    <string name="cd_delivery_fee">Delivery fee</string>
    <string name="cd_description">Description</string>
    <string name="cd_phonenumber">Phonenumber</string>
    <string name="cd_address">Address</string>
    <string name="cd_favorite">Favorite</string>
</resources>
