<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="restaurant"
            type="com.doordash.common.model.RestaurantEntry" />

        <variable
            name="callback"
            type="com.doordash.doordashlite.ui.RestaurantClickCallback" />

        <variable
            name="callbackFavorite"
            type="com.doordash.doordashlite.ui.FavoriteOnClickCallback" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/item_horizontal_margin"
        android:layout_marginStart="@dimen/item_horizontal_margin"
        android:gravity="center"
        android:minHeight="100dp"
        android:onClick="@{() ->  callback.onClick(restaurant)}"
        android:orientation="horizontal"
        app:cardCornerRadius="@dimen/cardView_round_radius"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/descriptions_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small_textview"
                    android:contentDescription="@string/cd_name_of_the_restaurant"
                    android:text="@{restaurant.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <LinearLayout
                    android:id="@+id/descriptions_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_small_textview"
                        android:layout_weight="1"
                        android:contentDescription="@string/cd_description"
                        android:maxLines="1"
                        android:text="@{restaurant.description}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small_textview"
                        android:layout_weight="1"
                        android:contentDescription="@string/cd_status"
                        android:maxLines="1"
                        android:text="@{restaurant.status}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small_textview"
                        android:layout_weight="1"
                        android:contentDescription="@string/cd_average_rating"
                        android:maxLines="1"
                        android:text="@{restaurant.averageRating}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <ImageView
                        android:id="@+id/favorite"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small_textview"
                        android:layout_weight="1"
                        android:contentDescription="@string/cd_favorite"
                        android:onClick="@{(view) ->  callbackFavorite.onClick(view, restaurant)}"
                        android:src="@android:drawable/btn_star_big_off"
                        app:favorite="@{restaurant}" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:gravity="center_vertical|center_horizontal"
                android:src="@android:drawable/stat_notify_error"
                app:error="@{@android:drawable/stat_notify_error}"
                app:imageUrl="@{restaurant.coverImageUrl}" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>
